--- a/2018 - Data Fetching in Render/package.json
+++ b/2018 - Data Fetching in Render/package.json
@@ -8,6 +8,7 @@
     "glamorous": "^4.12.5",
     "history": "^4.7.2",
     "lodash": "^4.17.10",
+    "prismjs": "^1.14.0",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
